--- a/public/pink/style.css
+++ b/public/pink/style.css
@@ -848,3 +848,18 @@ form input[type="text"], form textarea { border: 1px solid #CFCFCF; -webkit-tran
     max-width: 100%;
     width: auto;
 }
+
+.wrap_result
+{
+    background-color: #f4f4f4;
+    border: 1px solid #b77a2b;
+    padding: 20px;
+    position: fixed;
+    left: 35%;
+    top: 45%;
+    width: 300px;
+    height: 89px;
+    text-align: center;
+    display: none;
+    z-index: 5005;
+}
